# PelajaranGit

./: README.md  pyproject.toml  setup.py
pelajaran_git/: __init__.py  __main__.py  guess_number.py
pelajaran_git.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
