[tool.poetry]
name = "pelajaran_git"
version = "0.01"
description = "python version of npx envinfo"
authors = [ {name="Nicholas", email="nicholas@dontemail.me"},]
license = "MIT"
readme = "README.md"
packages = [{include = "pelajaran_git"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pelajaran_git = "pelajaran_git.__main__:main"

[project.urls]
"Homepage" = "https://github.com/Nikerlas/pelajaran_git"
"Bug Tracker" = "https://github.com/Nikerlas/pelajaran_git/issues"